# TheFear

./: .gitignore  CMakeLists.txt  UI.cpp  UI.h  camera.cpp  dissolve.cpp  dissolve.h  enemy.cpp  enemy.h  game.cpp  imgui.ini  input.cpp  light.cpp  main.cpp  main.h  model.cpp  model.h  player.cpp  player.h  playeranimation.cpp  readme.md  result.cpp  sea.h  shader.hlsl  skydome.cpp  sound.cpp  sword.cpp  thefear.sln  thefear.vcxproj  thefear.vcxproj.filters
Source/Private/: UI.cpp  camera.cpp  collision.cpp  debugproc.cpp  dissolve.cpp  enemy.cpp  fade.cpp  game.cpp  input.cpp  light.cpp  main.cpp  meshfield.cpp  meshwall.cpp  model.cpp  particle.cpp  player.cpp  playeranimation.cpp  renderer.cpp  result.cpp  score.cpp  sea.cpp  shadow.cpp  skydome.cpp  sound.cpp  sprite.cpp  sword.cpp  title.cpp  tree.cpp
Source/Public/: UI.h  camera.h  collision.h  dissolve.h  enemy.h  fade.h  game.h  imgui.h  light.h  main.h  meshfield.h  meshwall.h  model.h  particle.h  player.h  playeranimation.h  renderer.h  result.h  score.h  sea.h  shadow.h  skydome.h  sound.h  sprite.h  sword.h  title.h  tree.h
data/MODEL/: bear.mtl  robot.mtl  skydome.mtl
data/MODEL/.mayaSwatches/: file-20210401-13-z6rl6z.jpg_hcm.swatch  sky.jpg_hcm.swatch
data/MODEL/bear/: rightarm.mtl
thefear/: camera.cpp  camera.h  debugproc.cpp  debugproc.h  game.cpp  imgui.ini  imgui_demo.cpp  input.h  light.h  main.cpp  main.h  meshwall.cpp  model.cpp  model.h  player.cpp  player.h  sound.h  thefear.vcxproj  thefear.vcxproj.filters
thefear/data/MODEL/: bear.mtl  tree.mtl
thefear/x64/Debug/: thefear.exe.recipe  (+1 more)
(+20 files in other folders)
